--- a/.env
+++ b/.env
@@ -6,10 +6,10 @@ ALLOWED_HOSTS=72.62.51.225,localhost,127.0.0.1
 # Database Configuration
 DB_NAME=restaurant_db
 DB_USER=restaurant_user
-DB_PASSWORD=RestaurantPass123
+DB_PASSWORD=RestaurantSecure2024!
 DB_HOST=localhost
 DB_PORT=5432
-
+ 
 # Redis Configuration
 REDIS_URL=redis://localhost:6379/0
 
