--- a/print_client/config.json.example
+++ b/print_client/config.json.example
@@ -1,5 +1,5 @@
 {
-    "server_url": "http://localhost:8000",
+    "server_url": "https://hospitality.easyfixsoft.com",
     "api_token": "YOUR_API_TOKEN_HERE",
     "restaurant_id": null,
     "poll_interval": 5,
